feat: add login logic

--- a/profile/src/components/Header/Header.module.css
+++ b/profile/src/components/Header/Header.module.css
@@ -1,8 +1,16 @@
 .header{
   grid-area: header;
   background-color: #abc7dc;
+  display: flex;
+  justify-content: space-between;
 }
 
 .header img{
   width: 50px;
+}
+
+.loginBlock a{
+  padding: 0 20px;
+  color:#325e8f;
+  font-weight: bolder;
 }
