feat: add login/logout function

--- a/profile/src/components/Header/Header.module.css
+++ b/profile/src/components/Header/Header.module.css
@@ -2,6 +2,7 @@
   grid-area: header;
   background-color: #abc7dc;
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
 }
 
